--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <div class="container">
           <h1 class="text-center"><b>OFFERED SERVICES</b></h1>
           <p class="text-center">
-            I can offer my services in the devolopment of Website UI, Website redesign, WebApp development and MobileApp
+            I can offer my services in the development of Website UI, Website redesign, WebApp development and MobileApp
             development and more
           </p>
 
