--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
           <a href="https://www.facebook.com/pedro.grou?ref=bookmarks">
             <li class="wow fadeIn" data-wow-duration="1.8s" data-wow-delay="0s"><i class="fa fa-facebook"> </i></li>
           </a>
-          <a href="https://twitter.com/PedroGrou">
-            <li class="wow fadeIn" data-wow-duration="1.4s" data-wow-delay="0s"><i class="fa fa-twitter"> </i></li>
+          <a href="https://github.com/PedroGrou">
+            <li class="wow fadeIn" data-wow-duration="1.4s" data-wow-delay="0s"><i class="fa fa-github"> </i></li>
           </a>
         </ul>
       </div>
