--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="user-box">
           <img src="assets/img/foto_1.jpg" />
           <h1 class="wow jackInTheBox" data-wow-duration="1s" data-wow-delay="2s">Pedro A. Grou Gonçalves</h1>
-          <p>Freelancer Front End Developer</p>
+          <p>full-Stack Web Developer</p>
         </div>
       </div>
       <a href="#about">
