--- a/index.html
+++ b/index.html
@@ -786,15 +786,17 @@
 
             <div class="col-md-4">
               <i class="fa fa-internet-explorer"></i>
-              <p>Maintenance</p>
+              <a class="web-port" href="https://pedro-grou.netlify.app" target="_blank">
+                <p>pedro-grou</p>
+              </a>
             </div>
           </div>
-          <a href="https://drive.google.com/file/d/1znVJl_A3p7ht54Ps52JW83W9k8O8fTPA/view?usp=sharing">
+          <a href="https://drive.google.com/file/d/1ZXbx4YNHoPk7JOdLZkd-pz6powsWuRYI/view">
             <button type="button" class="btn btn-primary"><i class="fa fa-download"></i> Resume</button>
           </a>
         </div>
         <div class="footer text-center">
-          <p>Made with <i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i> by Pedro Gonçalves</p>
+          <p>@2019 Made with <i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i> by Pedro Gonçalves</p>
         </div>
       </div>
     </section>
