--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
           </a>
         </div>
         <div class="footer text-center">
-          <p>@2019 Made with <i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i> by Pedro Gonçalves</p>
+          <p>&copy;2019 Made with <i class="fa fa-heart"></i> and <i class="fa fa-coffee"></i> by Pedro Gonçalves</p>
         </div>
       </div>
     </section>
