--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
 
       <div class="social-icons">
         <ul>
-          <a href="https://www.linkedin.com/in/pedro-gon%C3%A7alves-80461115a/">
+          <a href="https://www.linkedin.com/in/pedro-gon%C3%A7alves-80461115a/" target="_blank">
             <li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0s"><i class="fa fa-linkedin"> </i></li>
           </a>
-          <a href="https://www.facebook.com/pedro.grou?ref=bookmarks">
-            <li class="wow fadeIn" data-wow-duration="1.8s" data-wow-delay="0s"><i class="fa fa-facebook"> </i></li>
+          <a href="https://www.facebook.com/pedro.grou?ref=bookmarks" target="_blank">
+            <li class="wow fadeIn" data-wow-duration="1.4s" data-wow-delay="0s"><i class="fa fa-facebook"> </i></li>
           </a>
-          <a href="https://github.com/PedroGrou">
-            <li class="wow fadeIn" data-wow-duration="1.4s" data-wow-delay="0s"><i class="fa fa-github"> </i></li>
+          <a href="https://github.com/PedroGrou" target="_blank">
+            <li class="wow fadeIn" data-wow-duration="1.8s" data-wow-delay="0s"><i class="fa fa-github"> </i></li>
           </a>
         </ul>
       </div>
@@ -791,7 +791,7 @@
               </a>
             </div>
           </div>
-          <a href="https://drive.google.com/file/d/1ZXbx4YNHoPk7JOdLZkd-pz6powsWuRYI/view">
+          <a href="https://drive.google.com/file/d/1ZXbx4YNHoPk7JOdLZkd-pz6powsWuRYI/view" target="_blank">
             <button type="button" class="btn btn-primary"><i class="fa fa-download"></i> Resume</button>
           </a>
         </div>
