--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
               </a>
             </div>
           </div>
-          <a href="https://drive.google.com/file/d/1ZXbx4YNHoPk7JOdLZkd-pz6powsWuRYI/view" target="_blank">
+          <a href="https://drive.google.com/uc?export=download&id=1LRAQVYMT_PUgunwzLyW47OA4brSzwS3j" target="_blank">
             <button type="button" class="btn btn-primary"><i class="fa fa-download"></i> Resume</button>
           </a>
         </div>
