--- a/index.html
+++ b/index.html
@@ -145,6 +145,33 @@
               <h3 class="text-center"><b>EXPERIENCES</b></h3>
               <ul class="timeline">
                 <li>
+                  <h4><span>2022 - </span> Cloud Engineer</h4>
+                  <p>
+                    Google Workspace Engineer - Support, Implementation, Configuration and ongoing technical support (L2/L3) for global customers in Europe and America regions. Adoption & Change Management Solution Provider using native tools, such as, AppSheet and App Script for automation, workflows and legacy systems replacement/dependency (e.g., workday, procurement, supply chain). Google Voice and ChromeOS Implementation<br />
+                    <b>Company</b> - Wipro<br />
+                    <b>Duration</b> - 3 years [2022 - Present]<br />
+                    <b>Location</b> - Porto, Portugal<br />
+                  </p>
+                </li>
+                <li>
+                  <h4><span>2021 - </span> System Engineer</h4>
+                  <p>
+                    Technical Support - Active Directory Management and Support. Monitoring and Managing end users and network Devices<br />
+                    <b>Company</b> - Axians<br />
+                    <b>Duration</b> - 1 year [2021 - 2022]<br />
+                    <b>Location</b> - Castelo Branco, Portugal<br />
+                  </p>
+                </li>
+                <li>
+                  <h4><span>2018 - </span> Front-End Developer</h4>
+                  <p>
+                    Development of Websites using ReactJS<br />
+                    <b>Company</b> - Freelancer<br />
+                    <b>Duration</b> - 3 years [2018 - 2021]<br />
+                    <b>Location</b> - Castelo Branco, Portugal<br />
+                  </p>
+                </li>
+                <li>
                   <h4><span>2018 - </span> Intership</h4>
                   <p>
                     Development of WebApps and MobileApps using OutSystems<br />
